# grammy-cli

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: constants.rs  main.rs  utils.rs
src/commands/: info.rs  new.rs
src/common/: config.rs  existence.rs  grammy.rs  mod.rs  runtime.rs  template.rs  version.rs
templates/Deno/: .env  deno.json
templates/Deno/src/: bot.ts  env.ts
templates/Node.js/: package.json  tsconfig.json
templates/Node.js/src/: bot.ts  env.ts
tests/: command_info.rs  command_new.rs
tests/utils/: common.rs  mod.rs  terminal.rs
