[package]
version = "0.0.0"
name = "grammy-cli"
description = "An unofficial command line interface for grammY."
authors = ["Nazar Antoniuk"]
license = "MIT"
keywords = ["grammy", "cli", "scaffolding"]
categories = ["command-line-utilities"]
repository = "https://github.com/niusia-ua/grammy-cli"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
